--- a/stealth-website/src/index.css
+++ b/stealth-website/src/index.css
@@ -8,6 +8,13 @@
 
 @font-face {
   font-family: 'EditorialNew';
+  src: url('/fonts/EditorialNew-Ultralight.woff') format('woff');
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'EditorialNew';
   src: url('/fonts/EditorialNew-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
